Modify the client folder in webrtccapturer sample to the latest one...

--- a/src/webrtc/samples/webrtccapturer/client/index.ejs
+++ b/src/webrtc/samples/webrtccapturer/client/index.ejs
@@ -15,10 +15,17 @@
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js"></script> -->
     <script type="text/javascript" src="socket.io-client/dist/socket.io.min.js"></script>
 
+    <script type="text/javascript" src="symple.js"></script>
+    <script type="text/javascript" src="symple.client.js"></script>
+    <script type="text/javascript" src="symple.player.js"></script>
+    <script type="text/javascript" src="symple.player.webrtc.js"></script>
+    <!--
+    TODO: use symple client from npm
     <script type="text/javascript" src="symple-client/src/symple.js"></script>
     <script type="text/javascript" src="symple-client/src/symple.client.js"></script>
     <script type="text/javascript" src="symple-client-player/src/symple.player.js"></script>
     <script type="text/javascript" src="symple-client-player/src/symple.player.webrtc.js"></script>
+    -->
     <script>
 
         // Symple client options
